miniconda3/envs/iraf27/iraf_extern/xray/xspatial/immodel/y.output

state 0
	$accept : _command $end 
	command : _    (1)

	SEMICOLON  shift 7
	NEWLINE  shift 8
	YYEOF  shift 6
	TABLE  shift 10
	LIST  shift 9
	FLOAT  shift 11
	.  reduce 1

	command  goto 1
	eost  goto 2
	dolist  goto 3
	dotable  goto 4
	dopixel  goto 5

state 1
	$accept :  command_$end 

	$end  accept
	.  error


state 2
	command :  eost_    (2)

	.  reduce 2


state 3
	command :  dolist_eost 

	SEMICOLON  shift 7
	NEWLINE  shift 8
	.  error

	eost  goto 12

state 4
	command :  dotable_eost 

	SEMICOLON  shift 7
	NEWLINE  shift 8
	.  error

	eost  goto 13

state 5
	command :  dopixel_eost 

	SEMICOLON  shift 7
	NEWLINE  shift 8
	.  error

	eost  goto 14

state 6
	command :  YYEOF_    (6)

	.  reduce 6


state 7
	eost :  SEMICOLON_    (7)

	.  reduce 7


state 8
	eost :  NEWLINE_    (8)

	.  reduce 8


state 9
	dolist :  LIST_    (9)

	.  reduce 9


state 10
	dotable :  TABLE_    (10)
	dotable :  TABLE_COLUMN 
	dotable :  TABLE_LPAREN COLUMN RPAREN 
	dotable :  TABLE_COLUMN opcom COLUMN opcom COLUMN 
	dotable :  TABLE_LPAREN COLUMN opcom COLUMN opcom COLUMN RPAREN 

	LPAREN  shift 16
	COLUMN  shift 15
	.  reduce 10


state 11
	dopixel :  FLOAT_opcom FLOAT opcom FLOAT 
	opcom : _    (16)

	COMMA  shift 18
	.  reduce 16

	opcom  goto 17

state 12
	command :  dolist eost_    (3)

	.  reduce 3


state 13
	command :  dotable eost_    (4)

	.  reduce 4


state 14
	command :  dopixel eost_    (5)

	.  reduce 5


state 15
	dotable :  TABLE COLUMN_    (11)
	dotable :  TABLE COLUMN_opcom COLUMN opcom COLUMN 
	opcom : _    (16)

	COMMA  shift 18
	COLUMN  reduce 16
	.  reduce 11

	opcom  goto 19

state 16
	dotable :  TABLE LPAREN_COLUMN RPAREN 
	dotable :  TABLE LPAREN_COLUMN opcom COLUMN opcom COLUMN RPAREN 

	COLUMN  shift 20
	.  error


state 17
	dopixel :  FLOAT opcom_FLOAT opcom FLOAT 

	FLOAT  shift 21
	.  error


state 18
	opcom :  COMMA_    (17)

	.  reduce 17


state 19
	dotable :  TABLE COLUMN opcom_COLUMN opcom COLUMN 

	COLUMN  shift 22
	.  error


state 20
	dotable :  TABLE LPAREN COLUMN_RPAREN 
	dotable :  TABLE LPAREN COLUMN_opcom COLUMN opcom COLUMN RPAREN 
	opcom : _    (16)

	COMMA  shift 18
	RPAREN  shift 23
	.  reduce 16

	opcom  goto 24

state 21
	dopixel :  FLOAT opcom FLOAT_opcom FLOAT 
	opcom : _    (16)

	COMMA  shift 18
	.  reduce 16

	opcom  goto 25

state 22
	dotable :  TABLE COLUMN opcom COLUMN_opcom COLUMN 
	opcom : _    (16)

	COMMA  shift 18
	.  reduce 16

	opcom  goto 26

state 23
	dotable :  TABLE LPAREN COLUMN RPAREN_    (12)

	.  reduce 12


state 24
	dotable :  TABLE LPAREN COLUMN opcom_COLUMN opcom COLUMN RPAREN 

	COLUMN  shift 27
	.  error


state 25
	dopixel :  FLOAT opcom FLOAT opcom_FLOAT 

	FLOAT  shift 28
	.  error


state 26
	dotable :  TABLE COLUMN opcom COLUMN opcom_COLUMN 

	COLUMN  shift 29
	.  error


state 27
	dotable :  TABLE LPAREN COLUMN opcom COLUMN_opcom COLUMN RPAREN 
	opcom : _    (16)

	COMMA  shift 18
	.  reduce 16

	opcom  goto 30

state 28
	dopixel :  FLOAT opcom FLOAT opcom FLOAT_    (15)

	.  reduce 15


state 29
	dotable :  TABLE COLUMN opcom COLUMN opcom COLUMN_    (13)

	.  reduce 13


state 30
	dotable :  TABLE LPAREN COLUMN opcom COLUMN opcom_COLUMN RPAREN 

	COLUMN  shift 31
	.  error


state 31
	dotable :  TABLE LPAREN COLUMN opcom COLUMN opcom COLUMN_RPAREN 

	RPAREN  shift 32
	.  error


state 32
	dotable :  TABLE LPAREN COLUMN opcom COLUMN opcom COLUMN RPAREN_    (14)

	.  reduce 14


12/127 terminals, 6/300 nonterminals
18/600 grammar rules, 33/750 states
0 shift/reduce, 0 reduce/reduce conflicts reported
16/350 working sets used
memory: states,etc. 166/12000, parser 13/12000
11/600 distinct lookahead sets
0 extra closures
29 shift entries, 2 exceptions
14 goto entries
0 entries saved by goto default
Optimizer space used: input 82/12000, output 50/12000
50 table entries, 15 zero
maximum spread: 266, maximum offset: 266
